More plots in the merge script and fixed STAR params file
Pipeline:
- fixed typo

Merge:
- added diagnostic plots based on different scalings
- removed old heatmap plot as this is largely redundant with these new
scaled diagnostic plots

--- a/STAR_Parameters_Exogenous.in
+++ b/STAR_Parameters_Exogenous.in
@@ -1,11 +1,10 @@
-## STAR Exogenous alignment parameters
+## STAR (unspliced) alignment parameters
 runMode  alignReads
 outSAMattributes  All
 limitBAMsortRAM  62000000000
 outFilterMismatchNmax  999
 outFilterMismatchNoverLmax  0.0
-#outFilterMismatchNoverLmax  0.05
-#outFilterMismatchNoverReadLmax  0.1
+readFilesCommand  zcat
 outSAMunmapped  None
 outReadsUnmapped  None
 outFilterMultimapNmax  10000
