--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: exceRpt
 description: The extra-cellular RNA processing toolkit.  Includes software to preprocess, align, quantitate, and normalise smallRNA-seq datasets
 google_analytics: UA-69502165-1
-show_downloads: false
+show_downloads: true
 theme: jekyll-theme-cayman
 site.github.zip_url: www.example.com
 
